--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/HernandezCorderoSegundoP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jdom.jar=dist\\lib\\jdom.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jdom.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
