--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/HernandezCorderoSegundoP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jdom.jar=dist\\lib\\jdom.jar
+file.reference.jdom.jar-1=lib\\jdom.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jdom.jar}
+    ${file.reference.jdom.jar}:\
+    ${file.reference.jdom.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
